--- a/package/package.json
+++ b/package/package.json
@@ -1,12 +1,16 @@
 {
+    "title":"Блоговый движок CMS Piccolo",
+    "requires":["page_data"],
     "configs":[
         {"file_in":"config/piccolo_core.json","file_out":"piccolo_core.json"},
-        {"file_in":"config/piccolo_blog.json","file_out":"piccolo_blog.json"}
+        {"file_in":"config/pages_data.json","file_out":"page_data.json"},
+        {"file_in":"config/piccolo_blog.json","file_out":"piccolo_blog.json","mode":"new"}
     ],
     "scripts":[
         {"file_in":"scripts/simple_blog.php","file_out":"simple_blog.php"}
     ],
     "templates":[
-        {"file_in":"templates/scripts/piccolo_blog/blog_post.html","file_out":"scripts/piccolo_blog/blog_post.html"}
+        {"file_in":"templates/scripts/piccolo_blog/blog_post.html","file_out":"scripts/piccolo_blog/blog_post.html"},
+        {"file_in":"templates/scripts/piccolo_blog/post_page.html","file_out":"scripts/piccolo_blog/post_page.html"}
     ]
 }
