Добавлена проверка формы
Просто добавил валидацию (проверка только на null), куда же без неё в
наши времена ?

--- a/packages/piccolo_blog_admin_locale_ru-RU/piccolo_blog_admin_locale_ru-RU.ini
+++ b/packages/piccolo_blog_admin_locale_ru-RU/piccolo_blog_admin_locale_ru-RU.ini
@@ -1,5 +1,5 @@
 [ru-RU]
 SUCCESS='Новость успешно опубликована'
-NO_TITLE='Без названия'
-NO_AUTHOR='Не указано'
-NO_CONTENT='Нет содержимого'
+NO_TITLE='Необходимо указать название'
+NO_AUTHOR='Необхожимо указать автора'
+NO_CONTENT='Необходимо ввести содержимое новости'
