--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,10 @@
 AddDefaultCharset UTF-8
 SetEnv TZ Europe/Moscow
 
+php_value display_errors 1
+php_value display_startup_errors 1
+php_value error_reporting E_ALL
+
 <IfModule mod_rewrite.c>
  
     RewriteEngine On 
