--- a/packages/piccolo_comments/package.json
+++ b/packages/piccolo_comments/package.json
@@ -1,5 +1,6 @@
 {
-    "title":"Система комментариев для CMS Piccolo",
+    "title":"Система комментариев",
+    "requires":["piccolo_comments_locale_ru-RU"],
     "configs":[
         {"file_in":"configs/core.json","file_out":"piccolo_core.json","mode":"merge"},
         {"file_in":"configs/comments.json","file_out":"piccolo_comments.json","mode":"merge"}
