--- a/packages/google_recaptcha/package.json
+++ b/packages/google_recaptcha/package.json
@@ -1,5 +1,5 @@
 {
-    "title": "Google ReCaptcha 2",
+    "title": "Компонент \"Google ReCaptcha 2\"",
     "requires": ["piccolo_admin"],
     "configs": [{
             "file_in": "piccolo_core.json",
