--- a/packages/mc_banlist/package.json
+++ b/packages/mc_banlist/package.json
@@ -14,6 +14,7 @@
     "templates":[
         {"file_in":"table.html","file_out":"scripts/mc_banlist/table.html","mode":"replace"},
         {"file_in":"table_line.html","file_out":"scripts/mc_banlist/table_line.html","mode":"replace"},
+        {"file_in":"finduser.html","file_out":"scripts/mc_banlist/finduser.html","mode":"replace"},
         {"file_in":"settings.html","file_out":"scripts/mc_banlist/settings.html","mode":"replace"}
     ]
     
