[piccolo_blog_admin] Актуализирован package.json

--- a/packages/piccolo_blog_admin/package.json
+++ b/packages/piccolo_blog_admin/package.json
@@ -1,6 +1,8 @@
 {
-    "title":"Блоговый движок CMS Piccolo (административная часть)",
-    "requires":["piccolo_blog"],
+    "title":"Административная часть компонента \"Блог\"",
+    "category":"admin",
+    "description":"Интерфейс администратора для пакета piccolo_blog. Возможно только добавление новостей, поля формы: название, автор, краткая новость, полная новость.",
+    "requires":["piccolo_blog","piccolo_blog_admin_locale_ru-RU"],
     "configs":[
         {
             "file_in": "piccolo_core.json",
