--- a/packages/base/packages/installer/package.json
+++ b/packages/base/packages/installer/package.json
@@ -2,6 +2,8 @@
     "title": "Установщик пакетов",
     "category": "base",
     "description": "Используется для установки или обновления пакетов",
+    "requires": ["base/packages/versionControl"],
+    "version": "1.0-dev",
     
     "classes": [
         {"file_in":"Package.php", "file_out": "danilko09/packages/Package.php"},
