Добавлена тестовая среда и тест контроля версий
index.php - быстрая навигация и просмотр развернутой среды
cleanup.php - удаляет временные файлы и развернутую среду (в т.ч. при запуске тестов)
utils - содержит утилиты для разработки и тестирования
tests - содержит файлы тестов

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-# piccolo auto installation scripts (developer tools)
-index.php
+# piccolo dev files
 packages/install.json
+tmp
 
 # Windows image file caches
 Thumbs.db
