--- a/packages/templates/def_tmpl_blog/package.json
+++ b/packages/templates/def_tmpl_blog/package.json
@@ -1,6 +1,6 @@
 {
     "title":"Стандартный шаблон оформления (блог)",
-    "requires":["page_data","piccolo_breadcrumbs","piccolo_comments"],
+    "requires":["page_data","ui/breadcrumbs","piccolo_comments"],
     "templates":[
         {"file_in":"template/css/blog-home.css","file_out":"css/blog-home.css"},
         {"file_in":"template/css/bootstrap.css","file_out":"css/bootstrap.css"},
