[base/index] Добавил генерацию locations.php
Файлик нужен чтобы определить расположение файлов после
установки. По идее установщик может использовать свои
значения для констант. В частности DevEnv намеренно
использует отличные от обычных пути, чтобы не размещать
файлы тестируемой сборки в корне сайта.

--- a/packages/base/index/package.json
+++ b/packages/base/index/package.json
@@ -2,7 +2,9 @@
 	"title":"index",
 	"description":"Подготоавливает среду для работы piccolo",
 	"version":"1.0",
+	"requires":["base/core"],
 
+	"before_install": "genLocations.php",
 	"root": [
 		{"file_in":".htaccess","file_out":".htaccess"},
 		{"file_in":"index.php","file_out":"index.php"}
