WSE_ENGINE -> PICCOLO_ENGINE (page_data, blog, comments, breadcrumbs)
Менял не везде, только там, где это мешало развернуть блог со
стандартным шаблоном.

--- a/packages/page_data/package.json
+++ b/packages/page_data/package.json
@@ -1,5 +1,7 @@
 {
     "title":"Скрипт распределения URI",
+    "requires": ["base/core"],
+
     "templates":[
         {"file_in":"templates/404.html","file_out":"404.html","mode":"new"}
     ],
