--- a/packages/piccolo_comments/package.json
+++ b/packages/piccolo_comments/package.json
@@ -1,6 +1,7 @@
 {
     "title":"Система комментариев",
-    "requires":["piccolo_comments/locale_ru-RU"],
+    "requires":["piccolo_comments/locale_ru-RU","base/core"],
+
     "configs":[
         {"file_in":"configs/core.json","file_out":"piccolo_core.json","mode":"merge"},
         {"file_in":"configs/comments.json","file_out":"piccolo_comments.json","mode":"merge"}
